--- a/DockerFile
+++ b/DockerFile
@@ -8,4 +8,4 @@ RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
